# KubernetesWorkshop

./: CreateCluster.py  README.md  asyncmain.py  kubeconfig-nodecluster.yaml  main.py  nodeport-service-NodeCluster.yaml  nodeport-service-nodecluster.yaml  pyproject.toml  values.yaml
Templates/: nodePortSVC.yaml
stubs/: nodePortSVC.yaml
vcluster/: CreateService.py  cluster.py  services.py
virtcluster/: CreateService.py  GetServices.py  cluster.py  service.py  utils.py
