[tool.poetry]
name = "kubernetesworkshop"
version = "0.1.0"
description = "A simple Flask app to demonstrate Kubernetes via a workshop"
authors = ["xelab04 <alexbissessur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
kubernetes = "^30.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
